# gpufsm

./: .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: A100_RUNBOOK.md  ARTIFACT_APPENDIX.md  CONTRIBUTING.md  CURE_PLAN.md  CURE_PROGRESS.md  DSL_EXPRESSIVENESS.md  KERNEL_EXPERIMENTS.md  LANDMARK_PLAN.md  LITERATURE_REVIEW.md  METHODOLOGY.md  NOVELTY_POSITIONING.md  NVIDIA_INTERVIEW_OWNERSHIP.md  NVIDIA_PUSH_PLAN.md  NVIDIA_PUSH_PROGRESS.md  P2_PASS_DESIGN.md  PPOPP_PLAN.md  PROFILING.md  REPRODUCIBILITY.md  RESULTS_COSTMODEL.md  SUBMISSION_PAPER2.md  TACO_COVER_LETTER.md  TACO_PLAN.md  TODO_SECOND_GPU.md
docs/cure/: LOWERING_PLAN.md
docs/rfc/: _research_notes.md  below-tritongpu-lowering.md  triton-per-lane-region.md
docs/upstream/: STRATEGY.md  bitcast-fold.patch  pr-bitcast-fold.md  pr-per-lane-loop-retirement.md  pr-ptr-roundtrip-fold.md  pr-split-join-fold.md  ptr-roundtrip-fold.patch  rfc-per-lane-loop-retirement.md  split-join-fold.patch  triton-issue-irregular-control.md
experiments/cure/: README.md  bench_perlane_retire.py  cure_generalize.py  cure_heldout.py  cure_moe.py  cure_predictive.py  cure_spmv.py  f3_full_cure_bound.py  f3_hoist_verify.py  f3_reduce_cost.py  landmark_attention.py  landmark_bfs.py  landmark_hashprobe.py  landmark_moe.py  landmark_rejection.py  landmark_spmv.py  lockstep_lowered_reference.mlir  lockstep_retired_reference.mlir  m0_anchor.py  m10_scalar_program.py  m2_lane_packed.py  m2e_worklist_packed.py  m2f_numwarps.py  m3_lite_b_occupancy.py  m3_lite_scalarlane.py  m4_dfa.py  m9_multiword.py  p2_lowering_wall.py  p2_pass_verify.py  p2_selector.py  p2_ttgir_probe.py  p3_cross_arch.py
experiments/cure/triton_thread_region_pass/: Passes.td  README.md  ThreadRegion.cpp  perlane_while_attempt.mlir  pipeline_wiring.patch  registration.patch
paper/: DRAFT.md  README.md  SUBMISSION.md  SUBMISSION_HPEC.md  arxiv_build.sh  bibliography.bib  build.sh  conference_101719.tex  figures.py  generate_figures.py  gpufsm.tex  gpufsm_hpec.tex  template.tex
paper/data/: benchmarks_final_publication.csv  costmodel_rtx4070.csv  dfa_knee_a100.csv  dfa_knee_rich_a100.csv  dfa_regret_rtx4070.csv  nsight_rtx4070.csv  real_automata_throughput_rtx4070.csv  regret_a100.csv  regret_multiseed_rtx4070.csv  scalar_ablation_rtx4070.csv  sweep_techniques.csv  worklist_shared_rtx4070.csv  worklist_warp_batch_rtx4070.csv  worklist_warp_rtx4070.csv
paper/sections/: 0-abstract.tex  1-intro.tex  10-ack.tex  2-background.tex  3-method.tex  4-results.tex  5-soa.tex  6-conclusions.tex
paper/utils/: acronyms.tex  colors.tex  comments.tex
paper2/: DRAFT.md  RELATED_WORK.md  figures.py  gpufsm2.tex  gpufsm_ppopp.tex  gpufsm_taco.tex  refs.bib  reproduce.sh
paper2/data/: m0_anchor_rtx4070.csv  m10_nsight_rtx4070.csv  m10_scalar_program_rtx4070.csv  m1_nsight_rtx4070.csv  m2_batch_scaling_rtx4070.csv  m2_lane_packed_rtx4070.csv  m2_nsight_rtx4070.csv  m2e_nsight_rtx4070.csv  m2e_worklist_packed_rtx4070.csv  m2f_numwarps_rtx4070.csv  m3_lite_b_occupancy_rtx4070.csv  m3_lite_nsight_rtx4070.csv  m3_lite_rtx4070.csv  m4_dfa_nsight_rtx4070.csv  m4_dfa_rtx4070.csv  m5_mlp_rtx4070.csv  m5b_roofline_rtx4070.csv  m9_multiword_rtx4070.csv
paper2/data/cross_arch/: regret_nvidia_geforce_rtx_4070.csv
paper2/data/landmark/: attention_nsight_rtx4070.csv  attention_rtx4070.csv  bfs_rtx4070.csv  cure_generalize_rtx4070.csv  cure_heldout_rtx4070.csv  cure_nsight_rtx4070.csv  cure_predictive_rtx4070.csv  cure_ptx_rtx4070.csv  cure_realworkload_rtx4070.csv  cure_speedup_rtx4070.csv  f3_hoist_rtx4070.csv  hashprobe_nsight_rtx4070.csv  hashprobe_rtx4070.csv  moe_nsight_rtx4070.csv  moe_rtx4070.csv  p2_lockstep.ttgir  p2_selector_rtx4070.csv  regret_law.csv  rejection_nsight_rtx4070.csv  rejection_rtx4070.csv  spmv_nsight_rtx4070.csv  spmv_rtx4070.csv
scripts/: a100_validate.sh  ablate_scalar_control.py  bench_worklist_shared.py  bench_worklist_warp.py  calibrate_costmodel.py  gluon_probe.py  profile_target.py  regret_multiseed.py  run_anmlzoo.py  run_cross_arch.sh  second_gpu_campaign.sh  second_gpu_quick.sh  second_gpu_rich.sh  sweep_dfa.py  sweep_techniques.py  validate_costmodel.py
src/gpufsm/: __init__.py  api.py  bench.py  bitmap.py  cli.py  costmodel.py  dfa.py  dfa_api.py  dfa_backends.py  examples.py  nfa.py  reference.py  registry.py  result.py
src/gpufsm/backends/: __init__.py  cpu.py  cuda_backend.py  triton_backend.py  warp_backend.py
src/gpufsm/backends/cuda/: __init__.py  nfa_kernel.cu
src/gpufsm/io/: __init__.py  anml.py  datasets.py
tests/: test_anml.py  test_anmlzoo_gpu.py  test_api.py  test_bitmap.py  test_cli.py  test_costmodel.py  test_datasets.py  test_dfa.py  test_dfa_gpu.py  test_gpu_backends.py  test_nfa.py  test_reference.py  test_worklist_warp.py
