[build-system]
# scikit-build-core drives CMake to (optionally) build the CUDA pybind11 extension.
# The build is graceful: if no CUDA toolkit is found, the extension is skipped and
# the pure-Python (CPU/Triton) package still installs and works.
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "gpufsm"
version = "0.1.0"
description = "Workload-driven study and portable framework for GPU finite-state-machine (NFA) processing: Triton vs CUDA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alessandro Potenza", email = "ap.alessandro.potenza@gmail.com" }]
keywords = ["gpu", "automata", "nfa", "fsm", "regex", "triton", "cuda", "benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
triton = ["triton>=3.0", "torch>=2.1"]
paper = ["matplotlib>=3.7", "pandas>=2.0"]
bitgen = []  # optional heavy backend (BitGen, MICRO'25); kept out of the core
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
gpufsm = "gpufsm.cli:main"

[project.urls]
Homepage = "https://github.com/alepot55/gpufsm"

[tool.scikit-build]
# Build the CUDA extension only when explicitly requested (GPUFSM_BUILD_CUDA=1).
# Default off so `pip install` works on CPU-only machines / CI.
cmake.version = ">=3.18"
wheel.packages = ["src/gpufsm"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
GPUFSM_BUILD_CUDA = "OFF"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src/gpufsm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: test requires a CUDA GPU and/or Triton (skipped in CPU-only CI)",
]
